style.css
* {
    box-sizing: border-box;
}

html {

    scroll-behavior: smooth;

}

section {

    scroll-margin-top: 80px;

}

body {

    margin: 0;
    font-family: "Poppins", sans-serif;
    background-color: #121f29;
    color: white;

}

nav {

    position: fixed;
    top: 0;
    left: 0;
    width: 100%;

    display: flex;
    justify-content: space-between;
    padding: 15px 125px;
    align-items: center;
    background-color: #121f29;
    z-index: 1000;

    box-sizing: border-box;

}

nav ul {

    display: flex;
    list-style: none;
    gap: 40px;
}

nav ul li a {

    text-decoration: none;
    color: white;

}

nav ul li a:hover {

    color: blue;

}

nav h1 {

    font-weight: 600;
    margin: 0;

}

#home {

    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 125px;
    padding-top: 80px;

    overflow: hidden;

}

#home img {

    width: 500px;
    display: block;

}

#home h1 {

    font-size: 50px;
    font-weight: 300;
    margin: 10px 0 10px 40px ;

}

#home h2 {

    font-size: 60px;
    font-weight: 800;
    margin: 10px 0;

}

#home p {

    font-size: 40px;
    font-weight: 800;
    margin: 0;

}

#home p span {

    color: blue;

}

.btn {

    display: inline-block;
    padding: 12px 24px;
    background-color: blue;
    color: white;
    text-decoration: none;
    border-radius: 6px;
    margin-right: 15px;
    font-weight: 500;

}

.btn:hover {

    background-color: #0000cc;

}

.hero-text {

    line-height: 1.3;

}

.hero-buttons {

    margin-top: 40px;

}

.hero-image {

    position: relative;

}

.hero-image::before {

    content: "";
    position: absolute;

    width: 450px;
    height: 450px;

    background: blue;

    border-radius: 50%;

    filter: blur(100px);

    z-index: -1;

    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);

}

#skills {

    background-color: #17232d;
    padding: 25px 125px;

}

#skills ul {

    display: flex;
    justify-content: space-between;
    list-style: none;
    padding: 0;
    margin: 0;

}

#skills li {

    color: #7a8a99;
    font-size: 22px;
    font-weight: 500;

}

#about {

    display: flex;
    gap: 120px;
    justify-content: space-between;
    align-items: center;
    padding: 100px 125px;

}

#about h3 {

    font-size: 40px;
    margin-top: 0;
    margin-bottom: 35px;

}

.about-text {

    max-width: 700px;

}

#about ul {

    list-style: none;
    padding: 0;
    margin: 0;
    position: relative;

}

#about li {

    display: flex;
    align-items: center;
    gap: 15px;

    padding: 20px 80px;

    font-size: 20px;
    position: relative;

}

#about li svg {

    width:50px;
    height: 50px;
    color: white;

}

#projects h3 {

    text-align: center;
    font-size: 40px;
    margin-top: 20px;
    margin-bottom: 50px;

}

.project {

    display: flex;
    gap: 80px;
    align-items: center;
    justify-content: space-between;
    margin: 125px;
    margin-top: 0;
    margin-bottom: 80px;

}

#projects img {

    width: 500px;
    border-radius: 15px;

}

.project-text {

    flex: 1;

}

.project-img {

    flex: 1;

}

.project-text h4 {

    font-size: 24px;
    margin-bottom: 15px;

}

.project-tech {

    display: flex;
    gap: 15px;
    flex-wrap: wrap;
    align-items: flex-start;

}

.project-tech span {

    border-radius: 15px;
    background-color: #17232d;
    padding: 5px 15px;
    white-space: nowrap;

}

.project-links {

    display: flex;
    gap: 20px;
    margin-top: 20px;
    align-items: center;

}

.project-live {

    color: white;
    text-decoration: none;
    font-weight: 500;

}
.project-live:hover {

    text-decoration: underline;
    color: blue;

}

.all-projects {

    text-align: center;
    margin-bottom: 80px;
}

#certificates h3 {

    text-align: center;
    font-size: 40px;
    margin-top: 20px;
    margin-bottom: 50px; 

}

#certificates > div {

    justify-content: center;
    display: flex;
    gap: 100px;

}

#certificates img {

    width: 300px;
    border-radius: 15px;
    transition: transform 0.3s;
    flex-shrink: 0;

}

#certificates img:hover {

    transform: scale(1.05);
    box-shadow: 0 10px 25px blue;

}

#certificates {

    padding: 0 125px;

}

#contact {

    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 100px 125px 70px 125px;
    gap: 120px;

}

.contact-text p {

    color: white;
    font-size: 20px;
    margin: 0 0 20px 0;
    position: relative;
    padding-left: 60px;
    margin-bottom: 20px;

}

.contact-text h4 {

    font-size: 48px;
    margin: 0;
    line-height: 1.4;

}

.contact-form form {

    display: flex;
    flex-direction: column;
    gap: 5px;
    width: 600px;

}



.contact-form input,
.contact-form textarea {

    background: transparent;
    border: none;
    border-bottom: 1px solid white;
    padding: 6px 0;
    color: white;
    font-size: 16px;
    outline: none;

}

.contact-form textarea {
    min-height: 20px;
    resize: none;
    overflow: hidden;
}

button {

    border: none;
    cursor: pointer;
}

.contact-form button {

    margin-top: 20px;
    align-self: center;
}

.contact-text {

    position: relative;
}

.contact-text::before {

    content: "";
    position: absolute;

    width: 160px;
    height: 3px;

    background-color: blue;

    left: -125px;
    top: 14px;

}

.contact-form input:focus,
.contact-form textarea:focus {
    border-bottom: 1px solid blue;
}

footer {

    text-align: center;
    padding: 5px 125px 15px 125px;
    background-color: #17232d;

}

footer p:first-child {

    font-size: 20px;
    font-weight: 500;
    margin-bottom: 0;

}

footer p:nth-child(2) {

    color: #7a8a99;
    font-size: 14px;
    margin-bottom: 15px;
    margin-top: 10px;

}

.footer-icons {

    display: flex;
    justify-content: center;
    gap: 20px;

}

.footer-icons a {

    width: 40px;
    height: 40px;

    display: flex;
    align-items: center;
    justify-content: center;

    border-radius: 50%;
    background-color: #121f29;
    color: white;

    transition: transform 0.2s;

}

.footer-icons a:hover {

    background-color: blue;
    transform: scale(1.1);

}

.hamburger {

    display: none;
    flex-direction: column;
    cursor: pointer;
    gap: 5px;

}

.hamburger span {

    width: 25px;
    height: 3px;
    background: white;

}

@media (max-width: 1024px) {

    nav {

        padding: 15px 40px;

    }

    nav ul {

        gap: 20px

    }

    nav ul li a {

        font-size: 14px;

    }

    #home {

        padding: 0 40px;
        padding-top: 80px;

    }

    #home img {

        width: 400px;

    }

    #home h1 {

        font-size: 40px;

    }

    #home h2 {

        font-size: 50px;

    }

    #home p {

        font-size: 32px;

    }

    #skills ul {

        gap: 30px;
        flex-wrap: wrap;
        justify-content: center;

    }

    #skills li {

        font-size: 18px;

    }

    #about {

        gap: 60px;

    }

    #about h3 {

        font-size: 34px;

    }

    .project {

        flex-wrap: wrap;
        margin: 80px 40px;
        gap: 40px;

    }

    .project-text {

        flex: 1;
        min-width: 0;

    }

    #projects img {

        flex: 1;
        width: 100%;
        max-width: 400px;

    }

    #certificates img {

        width: 250px;

    }

    #certificates > div {

        gap: 60px;

    }

    .contact-form form {

        width: 450px;

    }

    .contact-text h4 {

        font-size: 40px;

    }

}

@media (max-width: 768px) {

    #home {

        flex-direction: column;
        text-align: center;
        gap: 40px;

    }

    #home img {

        width: 300px;

    }

    #home h1 {

        margin-left: 0;

    }

    .hero-buttons {

        display: flex;
        justify-content: center;

    }

    #about {

        flex-direction: column;
        text-align: center;
        gap: 40px;

    }

    .project {

        flex-direction: column;
        gap: 30px;

        border-bottom: 1px solid blue;
        padding-bottom: 40px;

    }

    .project-img img{

        width: 100%;
        max-width: 350px;

    }
    
    #certificates > div {

        flex-direction: column;
        align-items: center;

    }

    #contact {

        padding: 80px 40px;
        flex-direction: column;
        text-align: center;
        gap: 60px;

    }

    .contact-text {

        display: flex;
        flex-direction: column;
        align-items: center;

    }

    .contact-text p {

        text-align: center;
        padding-left: 0;

    }

    .contact-form {

        display: flex;
        justify-content: center;

    }

    .contact-form form {

        width: 100%;
        max-width: 500px;

    }

    .contact-text::before {

        width: 150px;
        left: 50%;
        transform: translateX(-50%);
        top: -20%;

    }

}

@media (max-width: 480px) {

    nav h1 {

        font-size: 18px;

    }

    #home img {

        width: 240px;

    }

    #home h1 {

        font-size: 28px;

    }

    #home h2 {

        font-size: 32px;

    }

    #home p {

        font-size: 22px;

    }

    .btn {

        padding: 10px 18px;
        font-size: 14px;

    }

    #about li {

        font-size: 18px;
        padding: 15px 20px;

    }

    #about li svg {

        width: 35px;
        height: 35px;

    }

    .project {

        margin: 60px 20px;
        gap: 25px;
        flex-direction: column;

        border-bottom: 1px solid blue;
        padding-bottom: 40px;

    }

    .project:last-child {

        border-bottom: none;

    }

    .project-text {

        width: 100%;

    }

    .project-img {

        width: 100%;

    }

    #projects img {

        width: 100%;
        max-width: 100%;

    }

    .project-tech {

        display: flex;
        gap: 15px;
        flex-wrap: wrap;

    }

    .project-text span {

        font-size: 14px;

    }

    #certificates img {

        width: 220px;

    }

    .contact-text h4 {

        font-size: 32px;

    }

    .hamburger {

        display: flex;

    }

    .hamburger span {

        width: 25px;
        height: 3px;
        background: white;
        transition: 0.3s;
    }

    .hamburger.active span:nth-child(1) {

        transform: rotate(45deg) translate(5px, 5px);

    }

    .hamburger.active span:nth-child(2) {

        opacity: 0;

    }

    .hamburger.active span:nth-child(3) {

        transform: rotate(-45deg) translate(6px, -6px);

    }

    nav ul {

        position: absolute;
        top: 60px;
        right: 0;
        background: #121f29;
        flex-direction: column;
        width: 200px;
        padding: 20px;
        gap: 20px;

        display: none;

    }

    nav ul.active {

        display: flex;

    }
}

